--- a/index.html
+++ b/index.html
@@ -4,9 +4,73 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Хьюстон</title>
 </head>
 <body>
-    
+    <h1>Хьюстон</h1>
+    <p><strong>Хьюстон</strong> (англ. Houston) — четвёртый по количеству жителей город в Соединённых Штатах Америки и крупнейший город в штате Техас с населением 2 319 603 человека на 2017 год. Хьюстон является административным центром округа Харрис, а также главным экономическим центром агломерации Большого Хьюстона с общим населением 6 772 470 человек на 2016 год. Город располагается в 50 километрах от Мексиканского залива на прибрежной равнине.</p>
+    <p>Хьюстон был основан 30 августа 1836 года и включён в состав республики Техас 5 июня 1837 года,
+    получив своё имя в честь Сэмюэла Хьюстона — главнокомандующего армией Техаса во время
+    Техасской революции и президента Республики Техас. Быстрое развитие порта и железных дорог в
+    XIX веке, а также начало добычи нефти и последовавшее развитие нефтяной промышленности в XX
+    веке привели к быстрому росту населения. В 1960-е годы количество жителей превысило один
+    миллион человек, а в 2000-е — два миллиона.</p>
+    <p>Город является ведущим мировым центром энергетической промышленности, а экономика города
+    также представлена предприятиями в области аэронавтики, транспорта и здравоохранения.
+    Важнейшими объектами для экономики и инфраструктуры города являются космический центр
+    имени Линдона Джонсона, крупнейший американский по международным грузоперевозкам порт,
+    хьюстонский судоходный канал, крупнейший в мире Техасский медицинский центр.</p>
+    <h2>Содержание</h2>
+    <ol>
+        <li><a href="#history">История</a></li>
+        <ol>
+            <li><a href="#etymology">Этимология, прозвища</a></li>
+            <li><a href="#base">Основание</a></li>
+            <li><a href="#20-centery">XX век</a></li>
+        </ol>
+        <li><a href="#phys-geo">Физико-географическая характеристика</a></li>
+        <ol>
+            <li><a href="#climate">Географическое положение и климат</a></li>
+            <li><a href="#relief">Рельеф, внутренние воды</a></li>
+            <li><a href="#flora">Флора и фауна</a></li>
+        </ol>
+        <li><a href="#economy">Экономика</a></li>
+        <ol>
+            <li><a href="#general-state">Общее состояние</a></li>
+            <li><a href="#energy">Энергетика и нефтехимия</a></li>
+            <li><a href="#aerospace">Авиакосмическая промышленность</a></li>
+        </ol>
+        <li><a href="#population">Население</a></li>
+        <ol>
+            <li><a href="#dynamics-population">Динамика и структура населения</a></li>
+            <li><a href="#languages">Этнический и конфессиональный состав, языки</a></li>
+        </ol>
+        <li><a href="#mass-media">Средства массовой информации</a></li>
+        <li><a href="#twin-cities">Города-побратимы</a></li>
+    </ol>
+    <h2 id="history">История</h2>
+    <h3 id="etymology">Этимология, прозвища</h3>
+    <p>Город назван в честь Сэмюэла Хьюстона — главнокомандующего армией Техаса во время Техасской революции (1835—1836) и президента Республики Техас (1836—1838, 1841—1844).</p>
+    <p>Официальное прозвище Хьюстона — «Space city», которое можно перевести, как «космический
+    город», «город космонавтики» или «космоград». Название дано из-за того, что здесь находится
+    космический центр имени Линдона Джонсона. Всего город имеет 12 прозвищ.</p>
+    <p>В американской разговорной речи есть популярная фраза: «<b>Хьюстон, у нас проблема</b>» (англ.
+    Houston, we’ve had a problem), появившаяся после неудачной миссии Аполлон-13. В Хьюстоне
+    проходили съёмки фильма «Аполлон-13», в основу сюжета которого легли реальные события миссии.</p>
+    <h3 id="base">Основание</h3>
+    <h3 id="20-centery">XX век</h3>
+    <h2 id="phys-geo">Физико-географическая характеристика</h2>
+    <h3 id="climate">Географическое положение и климат</h3>
+    <h3 id="relief">Рельеф, внутренние воды</h3>
+    <h3 id="flora">Флора и фауна</h3>
+    <h2 id="economy">Экономика</h2>
+    <h3 id="general-state">Общее состояние</h3>
+    <h3 id="energy">Энергетика и нефтехимия</h3>
+    <h3 id="aerospace">Авиакосмическая промышленность</h3>
+    <h2 id="population">Население</h2>
+    <h3 id="dynamics-population">Динамика и структура населения</h3>
+    <h3 id="languages">Этнический и конфессиональный состав, языки</h3>
+    <h2 id="mass-media">Средства массовой информации</h2>
+    <h2 id="twin-cities">Города-побратимы</h2>
 </body>
 </html>
